fixed jumbo spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1300,6 +1300,10 @@ margin-right: 1.6rem;
       margin-top: 8rem;
     }
 
+    .core-products{
+      margin-top: 8rem;
+    }
+
     .core-products h2{
       font-size: 4rem;
       margin-bottom: 0rem;
